@@ -1,4 +1,4 @@
-.TH "ecasoundrc" "5" "09\&.07\&.2004" "" "Multimedia software" 
+.TH "ecasoundrc" "5" "14\&.07\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasoundrc \- ecasound rcfile
@@ -166,6 +166,23 @@ the output ogg, %c, %b and %s with matching audio
 format parameters, %I with either \'signed\' or \'unsigned\', and
 %E with either \'little\' or \'big\'\&. Defaults to 
 \fIflac -o %f --force-raw-format --channels=%c --bps=%b --sample-rate=%s --sign=%I --endian=%E -\fP\&.
+.IP 
+.IP "ext-cmd-aac-input" 
+Command for starting AAC input\&. Ecasound expects that signed,
+16bit, stereo, big-endian audio samplesare written to standard 
+output\&. It should be noted that	Ecasound is not able to query 
+the input sample rate, so this needs to be set manually by the user\&. 
+Before execution, %f is replaced with path to the input AAC
+file\&. Note! FAAC must be compiled with MP4 support\&. Defaults to 
+\fIfaad -w -b 1 -f 2 -d %f\fP\&.
+.IP 
+.IP "ext-cmd-aac-output" 
+Command for starting AAC output\&. Ecasound will write big-endian
+audio samples to standard output\&. All other audio parameters are
+configurable\&. Before execution, %f is replaced with path to
+the output AAC file, %c, %b and %s with matching audio format 
+parameters\&. Note! FAAC must be compiled with MP4 support\&. Defaults to 
+\fIfaac -P -o %f -R %s -B %b -C %c -\fP\&.
 .IP 
 .PP 
 .SH "SEE ALSO" 
