@@ -1,6 +1,5 @@
 // ------------------------------------------------------------------------
-// audioio-flac.cpp: Interface to FLAC decoders and encoders using UNIX 
-//                   pipe i/o.
+// audioio-faad.cpp: Interface class for FAAC/FAAD AAC encoder/decoder.
 // Copyright (C) 2004 Kai Vehmanen (kai.vehmanen@wakkanet.fi)
 //
 // This program is free software; you can redistribute it and/or modify
@@ -26,36 +25,35 @@
 #include <kvu_message_item.h>
 #include <kvu_numtostr.h>
 
-#include "audioio-flac.h"
+#include "audioio-aac.h"
 
 #include "eca-logger.h"
 
 /**
  * References:
- *    http://flac.sourceforge.net/
- *    http://flac.sourceforge.net/format.html
+ *    http://www.audiocoding.com/
  */
 
-string FLAC_FORKED_INTERFACE::default_input_cmd = "flac -d -c %f";
-string FLAC_FORKED_INTERFACE::default_output_cmd = "flac -o %f --force-raw-format --channels=%c --bps=%b --sample-rate=%s --sign=%I --endian=%E -";
+string AAC_FORKED_INTERFACE::default_input_cmd = "faad -w -b 1 -f 2 -d %f";
+string AAC_FORKED_INTERFACE::default_output_cmd = "faac -P -o %f -R %s -B %b -C %c -";
 
-void FLAC_FORKED_INTERFACE::set_input_cmd(const std::string& value) { FLAC_FORKED_INTERFACE::default_input_cmd = value; }
-void FLAC_FORKED_INTERFACE::set_output_cmd(const std::string& value) { FLAC_FORKED_INTERFACE::default_output_cmd = value; }
+void AAC_FORKED_INTERFACE::set_input_cmd(const std::string& value) { AAC_FORKED_INTERFACE::default_input_cmd = value; }
+void AAC_FORKED_INTERFACE::set_output_cmd(const std::string& value) { AAC_FORKED_INTERFACE::default_output_cmd = value; }
 
-FLAC_FORKED_INTERFACE::FLAC_FORKED_INTERFACE(const std::string& name)
+AAC_FORKED_INTERFACE::AAC_FORKED_INTERFACE(const std::string& name)
 {
   set_label(name);
   finished_rep = false;
 }
 
-FLAC_FORKED_INTERFACE::~FLAC_FORKED_INTERFACE(void)
+AAC_FORKED_INTERFACE::~AAC_FORKED_INTERFACE(void)
 {
   if (is_open() == true) {
     close();
   }
 }
 
-void FLAC_FORKED_INTERFACE::open(void) throw (AUDIO_IO::SETUP_ERROR &)
+void AAC_FORKED_INTERFACE::open(void) throw (AUDIO_IO::SETUP_ERROR &)
 {
   std::string urlprefix;
   triggered_rep = false;
@@ -72,33 +70,29 @@ void FLAC_FORKED_INTERFACE::open(void) throw (AUDIO_IO::SETUP_ERROR &)
     if (ret != 0) {
       size_t offset = label().find_first_of("://");
       if (offset == std::string::npos) {
-	throw(SETUP_ERROR(SETUP_ERROR::io_mode, "AUDIOIO-FLAC: Can't open file " + label() + "."));
+	throw(SETUP_ERROR(SETUP_ERROR::io_mode, "AUDIOIO-AAC: Can't open file " + label() + "."));
       }
       else {
 	urlprefix = std::string(label(), 0, offset);
-	ECA_LOG_MSG(ECA_LOGGER::user_objects, "(audioio-flac) Found url; protocol '" + urlprefix + "'.");
+	ECA_LOG_MSG(ECA_LOGGER::user_objects, "(audioio-aac) Found url; protocol '" + urlprefix + "'.");
       }
     }
 
-    /* decoder supports: nothing configurable nor fixed
-     * 
-     * FIXME: we have no idea about the audio format of the 
-     *        stream we get from the decoder... ybe we should force the decoder
-     *        to generate RIFF wave to a named pipe and parse the header...? 
-     * 
-     *        - possibly copy FLAC__metadata_get_streaminfo() from flac 
-     *          package... might be messy due to dependencies
-     *        - see http://flac.sourceforge.net/format.html
-     */
+    /* decoder supports: fixed channel count and sample format, 
+                         sample rate unknown and must be set manually  */
+    set_channels(2); /* 5.1 downmixed to stereo if needed by faad2 */
+    set_sample_format(ECA_AUDIO_FORMAT::sfmt_s16_be);
   }
   else {
-    /* encoder supports: coding, channel-count, srate and endianess configurable */
+    /* encoder supports: coding, channel-count and srate configurable;
+       fixed endianess */
+    set_sample_endianess(ECA_AUDIO_FORMAT::se_big);
   }
 
   AUDIO_IO::open();
 }
 
-void FLAC_FORKED_INTERFACE::close(void)
+void AAC_FORKED_INTERFACE::close(void)
 {
   if (pid_of_child() > 0) {
       ECA_LOG_MSG(ECA_LOGGER::user_objects, "(audioio-mp3) Cleaning child process." + kvu_numtostr(pid_of_child()) + ".");
@@ -109,7 +103,7 @@ void FLAC_FORKED_INTERFACE::close(void)
   AUDIO_IO::close();
 }
 
-long int FLAC_FORKED_INTERFACE::read_samples(void* target_buffer, long int samples)
+long int AAC_FORKED_INTERFACE::read_samples(void* target_buffer, long int samples)
 {
   if (triggered_rep != true) { 
     triggered_rep = true;
@@ -125,7 +119,7 @@ long int FLAC_FORKED_INTERFACE::read_samples(void* target_buffer, long int sampl
 
   if (bytes_rep < samples * frame_size() || bytes_rep == 0) {
     if (position_in_samples() == 0) 
-      ECA_LOG_MSG(ECA_LOGGER::info, "(audioio-flac) Can't start process \"" + FLAC_FORKED_INTERFACE::default_input_cmd + "\". Please check your ~/.ecasound/ecasoundrc.");
+      ECA_LOG_MSG(ECA_LOGGER::info, "(audioio-aac) Can't start process \"" + AAC_FORKED_INTERFACE::default_input_cmd + "\". Please check your ~/.ecasound/ecasoundrc.");
     finished_rep = true;
     triggered_rep = false;
   }
@@ -135,7 +129,7 @@ long int FLAC_FORKED_INTERFACE::read_samples(void* target_buffer, long int sampl
   return(bytes_rep / frame_size());
 }
 
-void FLAC_FORKED_INTERFACE::write_samples(void* target_buffer, long int samples)
+void AAC_FORKED_INTERFACE::write_samples(void* target_buffer, long int samples)
 {
   if (triggered_rep != true) {
     triggered_rep = true;
@@ -161,16 +155,16 @@ void FLAC_FORKED_INTERFACE::write_samples(void* target_buffer, long int samples)
   }
 }
 
-void FLAC_FORKED_INTERFACE::seek_position(void) {
+void AAC_FORKED_INTERFACE::seek_position(void) {
   if (pid_of_child() > 0) {
-    ECA_LOG_MSG(ECA_LOGGER::user_objects, "(audioio-flac) Cleaning child process." + kvu_numtostr(pid_of_child()) + ".");
+    ECA_LOG_MSG(ECA_LOGGER::user_objects, "(audioio-aac) Cleaning child process." + kvu_numtostr(pid_of_child()) + ".");
     clean_child();
     triggered_rep = false;
   }
   set_position_in_samples(0);
 }
 
-void FLAC_FORKED_INTERFACE::set_parameter(int param, string value)
+void AAC_FORKED_INTERFACE::set_parameter(int param, string value)
 {
   switch (param) {
   case 1: 
@@ -179,7 +173,7 @@ void FLAC_FORKED_INTERFACE::set_parameter(int param, string value)
   }
 }
 
-string FLAC_FORKED_INTERFACE::get_parameter(int param) const
+string AAC_FORKED_INTERFACE::get_parameter(int param) const
 {
   switch (param) {
   case 1: 
@@ -188,11 +182,11 @@ string FLAC_FORKED_INTERFACE::get_parameter(int param) const
   return("");
 }
 
-void FLAC_FORKED_INTERFACE::fork_input_process(void)
+void AAC_FORKED_INTERFACE::fork_input_process(void)
 {
-  ECA_LOG_MSG(ECA_LOGGER::user_objects, FLAC_FORKED_INTERFACE::default_input_cmd);
+  ECA_LOG_MSG(ECA_LOGGER::user_objects, AAC_FORKED_INTERFACE::default_input_cmd);
 
-  set_fork_command(FLAC_FORKED_INTERFACE::default_input_cmd);
+  set_fork_command(AAC_FORKED_INTERFACE::default_input_cmd);
   set_fork_file_name(label());
 
   fork_child_for_read();
@@ -208,23 +202,9 @@ void FLAC_FORKED_INTERFACE::fork_input_process(void)
     f1_rep = 0;
 }
 
-void FLAC_FORKED_INTERFACE::fork_output_process(void)
+void AAC_FORKED_INTERFACE::fork_output_process(void)
 {
-  string command = FLAC_FORKED_INTERFACE::default_output_cmd;
-
-  // replace with 'little/big' byteorder
-  if (command.find("%E") != string::npos) {
-    string byteorder ("big");
-    if (sample_endianess() == ECA_AUDIO_FORMAT::se_little) byteorder = "little";
-    command.replace(command.find("%E"), 2, byteorder);
-  }
-
-  // replace with 'signed/unsigned'
-  if (command.find("%I") != string::npos) {
-    string sign ("signed");
-    if (sample_coding() == ECA_AUDIO_FORMAT::sc_unsigned) sign = "unsigned";
-    command.replace(command.find("%I"), 2, sign);
-  }
+  string command = AAC_FORKED_INTERFACE::default_output_cmd;
 
   set_fork_command(command);
   set_fork_file_name(label());
